--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "postbuild": "pm2 restart cnpj_app || pm2 start node_modules/vite/bin/vite.js --name cnpj_app -- preview --host --port 3333",
     "lint": "eslint .",
     "preview": "vite preview"
   },
